first part complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,18 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "additional", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <style>
+      <%= ".msg-#{current_user&.id}" %> {
+        background-color: #007bff !important;
+        padding: 10px;
+      }
+      <%= ".cont-#{current_user&.id}" %> {
+        display: flex;
+        justify-content: flex-end;
+      }
+    </style>
   </head>
 
   <body>
@@ -18,7 +29,7 @@
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
     
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <%= render 'shared/header' %>
         <%= yield %>
