--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,20 +1,43 @@
-<div class="container">
-  <h5 class="lead"><%= current_user.email %></h5>
-  <h4 class="">Users</h4>
-  <% if @users.present? %>
-    <% @users.each do |user| %>
-      <%= render user if user.present? %>
-    <% end %>
-  <% else %>
-    <p>No users available.</p>
-  <% end %>
+<div id="chatroom_container" class="row bg-dark text-light">
+  <div id="side_panel" class="col-lg-4">
+    <h5 class="lead"><%= current_user.email %></h5>
 
-  <h4>Rooms</h4>
-  <% if @rooms.present? %>
-    <% @rooms.each do |room| %>
-      <%= render room if room.present? %>
+    <h4 class="">Users</h4>
+    <%= turbo_stream_from "users" %>
+    <div id="users">
+      <% if @users.present? %>
+      <% @users.each do |user| %>
+        <%= render user if user.present? %>
+      <% end %>
+      <% else %>
+        <p>No users available.</p>
+      <% end %>
+    </div>
+
+    <h4>Rooms</h4>
+    <%= render "shared/new_room_form"%>
+    <%= turbo_stream_from "rooms" %>
+    <div id="rooms">
+      <% if @rooms.present? %>
+        <% @rooms.each do |room| %>
+          <%= render room if room.present? %>
+        <% end %>
+      <% else %>
+        <p>No rooms available.</p>
+      <% end %>
+    </div>
+
+  </div>
+  <div id="room_container" class="col-lg-8 bg-dark text-light">  
+    <% if @single_room %>
+      <div id="single_room">
+        <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
+        <%= turbo_stream_from @single_room %>
+        <div id="messages">
+          <%= render @messages %>
+        </div>
+        <%= render 'shared/new_message_form' %>
+      </div>
     <% end %>
-  <% else %>
-    <p>No rooms available.</p>
-  <% end %>
-</div>
+  </div>
+</div>  
