--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div id="chatroom_container" class="row bg-dark text-light">
-  <div id="side_panel" class="col-lg-4">
+  <div id="side_panel" class="col-md-4 col-sm-4">
     <h5 class="lead"><%= current_user.email %></h5>
 
     <h4 class="">Users</h4>
@@ -28,12 +28,12 @@
     </div>
 
   </div>
-  <div id="room_container" class="col-lg-8 bg-dark text-light">  
+  <div id="room_container" class="col-md-8 col-sm-8 bg-dark text-light">  
     <% if @single_room %>
       <div id="single_room">
         <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
         <%= turbo_stream_from @single_room %>
-        <div id="messages">
+        <div id="messages" data-controller="scroll">
           <%= render @messages %>
         </div>
         <%= render 'shared/new_message_form' %>
