--- a/app/views/shared/_new_room_form.html.erb
+++ b/app/views/shared/_new_room_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @room, remote: true, class: "d-flex") do |form| %>
+<%= form_with(model: @room, remote: true, class: "d-flex", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |form| %>
   <%= form.text_field :name, class: "form-control" %>
   <%= form.submit data: {disable_with: false}, class: "btn btn-primary" %>
 <% end %>
