--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,13 @@
 <h1>Chatroom</h1>
 <% if current_user %>
-  <%= link_to 'Start Chatting', rooms_path %>
-  <%= link_to 'Logout', destroy_user_session_path, method: :delete, data: {confirm: "Are you sure to logout" } %>
+  <div class="d-flex align-items-center justify-content-start gap-2">
+    <%= link_to 'Start Chatting', rooms_path %>
+    <%= image_tag(current_user.avatar_thumbnail) %>
+  </div>
+  <div class="d-flex align-items-center justify-content-start mt-2 gap-2">
+    <%= link_to 'Logout', destroy_user_session_path, class: "btn btn-danger", method: :delete, data: {confirm: "Are you sure to logout" } %>
+    <%= link_to 'Edit', edit_user_registration_path, class: "btn btn-secondary" %>
+  </div>
 <% else %>
   <%= link_to "Login", new_user_session_path %>
   <%= link_to "Sign Up", new_user_registration_path %>
